@@ -11,12 +11,12 @@
     <modules>
         <module>queueServer</module>
         <module>queueClient</module>
-        <module>PrioQueue</module>
+        <module>prioQueue</module>
     </modules>
 
     <properties>
-        <maven.compiler.source>20</maven.compiler.source>
-        <maven.compiler.target>20</maven.compiler.target>
+        <maven.compiler.source>19</maven.compiler.source>
+        <maven.compiler.target>19</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
@@ -120,8 +120,11 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.10.1</version>
                 <configuration>
-                    <release>${maven.compiler.target}</release>
-                    <enablePreview>true</enablePreview>
+                    <source>${maven.compiler.source}</source>
+                    <target>${maven.compiler.target}</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
+<!--                    <release>${maven.compiler.target}</release>-->
+<!--                    <enablePreview>true</enablePreview>-->
                 </configuration>
             </plugin>
             <plugin>
